--- a/lab2_MLP_Classification/Exercise_0203 - Regression.ipynb
+++ b/lab2_MLP_Classification/Exercise_0203 - Regression.ipynb
@@ -65,18 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -88,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +143,7 @@
     "        hidden = self.fc1(x)\n",
     "        relu = self.relu(hidden)\n",
     "        output = self.fc2(relu)\n",
-    "        return torch.sigmoid(output)"
+    "        return self.relu(output)"
    ]
   },
   {
@@ -164,11 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def numpy2Dataloader(x,y, batch_size=25, num_workers=10,**kwargs):\n",
+    "def numpy2Dataloader(x,y, batch_size=50, num_workers=0,**kwargs):\n",
     "    return DataLoader(\n",
     "        TensorDataset(\n",
     "            torch.from_numpy(x).float(), \n",
@@ -182,13 +173,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate training and validation data\n",
-    "x_train, d_train = MLPData.regr1(250, 0.0) # 250 data points with no noise\n",
-    "x_val, d_val = MLPData.regr1(1000, 0.0)\n",
+    "x_train, d_train = MLPData.regr1(250, 0.4) # 250 data points with no noise\n",
+    "x_val, d_val = MLPData.regr1(1000, 0.4)\n",
     "\n",
     "# Here we need to normalize the target values\n",
     "norm_m = d_train.mean(axis=0)\n",
@@ -212,22 +203,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = {\n",
-    "    'max_epochs':20,\n",
+    "    'max_epochs':100,\n",
     "    'model_params':{\n",
     "        'inp_dim':x_train.shape[1],         \n",
-    "        'hidden_nodes':1,   # activation functions for the hidden layer\n",
-    "        'num_out':1 # if binary --> 1 |  regression--> num inputs | multi-class--> num of classes\n",
+    "        'hidden_nodes':15,   # activation functions for the hidden layer\n",
+    "        'num_out':x_train.shape[1] # if binary --> 1 |  regression--> num inputs | multi-class--> num of classes\n",
     "    },\n",
     "    'criterion':torch.nn.MSELoss(), # error function\n",
     "    'optimizer':{\n",
     "        \"type\":torch.optim.Adam,\n",
     "        \"args\":{\n",
     "            \"lr\":0.005,\n",
+    "            \"weight_decay\":0.5\n",
     "        }\n",
     "    }\n",
     "}"
@@ -249,9 +241,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: True, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 100 [5/5] {'loss': '1'}9'}\r"
+     ]
+    }
+   ],
    "source": [
     "model = Model(MLP(**config[\"model_params\"]),**config)\n",
     "\n",
@@ -266,7 +275,7 @@
     "        )\n",
     "trainer.fit(\n",
     "    model, \n",
-    "    train_dataloader=train_loader,\n",
+    "    train_dataloaders=train_loader,\n",
     "    val_dataloaders=val_loader\n",
     ");"
    ]
@@ -280,12 +289,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.stats_class(x_train, d_train, 'Training', model)\n",
-    "plot.stats_class(x_val, d_val, 'Validation', model)"
+    "# # Not compatible with nn.Module so I'm going to use tensorboard's logs of loss\n",
+    "# plot.stats_reg(d_train, x_train.T, 'Training', model)\n",
+    "# plot.stats_reg(d_val, x_val.T, 'Validation', model)"
    ]
   },
   {
@@ -293,9 +303,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "d_train"
-   ]
+   "source": []
   }
  ],
  "metadata": {
