Added work done on school server

--- a/lab2_MLP_Classification/Report.ipynb
+++ b/lab2_MLP_Classification/Report.ipynb
@@ -16,9 +16,11 @@
    "metadata": {},
    "source": [
     "**Name:** Erik Lidbeck\n",
-    "**Date:** 2021-12-06\n",
+    "**Date:** 2021-01-28\n",
     "\n",
     "## Introduction\n",
+    "\n",
+    "This lab introduces \n",
     "\n",
     "## Result\n",
     "\n",
@@ -27,7 +29,7 @@
     "\n",
     "### Exercise 2\n",
     "#### Task 1\n",
-    "88.1 % Accuracy\n",
+    "I managed to get 88.1 % Accuracy\n",
     "#### Task 2\n",
     "Accuracy: 95%\n",
     "Batch size: 50\n",
@@ -59,24 +61,57 @@
     "\n",
     "#### Task 3\n",
     "Instead of increasing number of hidden nodes we now implement l2 regularization by using weight decay in the optimizer.\n",
-    "In order of the list: Version 19 = 0.000001, 20 = 0.000005, 21 = 0.00001, ..., 29 = 0.1\n",
+    "In order of the list: Version 19 = 0.000001, 20 = 0.000005, 21 = 0.00001, 0.00005, 0.0001, 0.0005, 0.001, 0.005, 0.01, 0.05, 0.1. \n",
     "<center><img src=\"./loss_l2_t3.png\" width=\"600\"></center>\n",
     "By using this method we find that Version 25 (decay = 0.001) get the optimal validation performance  0.682\n",
     "\n",
     "#### Task 4\n",
+    "Even though I did not get a lower loss with regularization than using different numbers of hidden nodes, it certainly did have a noticeable effect. It should be possible to increase the performance further by finetuning other parameters such as batch size.\n",
     "\n",
     "### Exercise 4\n",
     "#### Task 1\n",
+    "After experimenting with the amount of layers (using a between 15-30 hidden nodes) I quickly saw that more layers often made the model words and sometimes would yield results like this:\n",
+    "<center><img src=\"./Interresting.png\" width=\"400\"></center>\n",
+    "So I abandoned trying a high number of layers and focused on the number of hidden nodes. After trying a range of hidden nodes [10, 20, 30, 40, 50, 60, 70, 80, 90, 100] I couldn't seem to decrease the loss substantially. I began to look back at model itself and change the ouput activation. At first I was trying ReLu and switched to SoftMax which didn't have any noticable impact, then I changed to a simple linear activation. This resulted in a drastic decrease in loss. A model that had 1.81 loss and 74% accuracy became 0.32 loss and 90% accuracy.\n",
+    "<center><img src=\"./linear.png\" width=\"800\"></center>\n",
+    "\n",
+    "After testing trying different learning rates [0.001, 0.002, 0.004, 0.006, 0.008, 0.01] to move out of plateaus (seen in the red and blue)\n",
+    "<center><img src=\"./2_4_task1.png\" width=\"800\"></center>\n",
+    "\n",
+    "the best model was 80 Hidden nodes, 1 Layer, lr = 0.004, \n",
+    "\n",
     "#### Task 2"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d55ffd7",
+   "cell_type": "markdown",
+   "id": "9780f80b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now I will classify a spiral dataset. This task is a binary classification problem, and therefore I will use binary cross entropy loss. The aim of this task is to make a model that correctly classifies all training samples. I will use a max_epoch = 1000.\n",
+    "\n",
+    "                                                             The data\n",
+    "<center><img src=\"./0204_data.png\" width=\"400\"></center>\n",
+    "\n",
+    "From experimenting with different combinations of nodes and layers I noticed that wider networks worked best (similar to previous tasks). I was able to get perfect classification with this setup:\n",
+    "\n",
+    "                    1 hidden layer x 100 hidden nodes, learning rate = 0.005, batch size = 25\n",
+    "\n",
+    "<center><img src=\"./0204_wide.png\" width=\"800\"></center>\n",
+    "\n",
+    "But I wasn't happy with this result. How small can I make it? At first I tried halving the hidden nodes and changing the learning rate. I was able to get the best result with a learning rate of 0.011\n",
+    "\n",
+    "<center><img src=\"./0204_smaller.png\" width=\"800\"></center>\n",
+    "\n",
+    "The uptick visible shows that because of the high learning rate the optimizer might jump to a higher loss. This could mean that a slightly lower learning rate would be beneficient. But after trying 0.009 and 0.010 three times each, both would reach perfect classification 1/3 while 0.011 would always reach perfect classification (the rest would be around 95% accurate). I must admit that this sample size is too small to accuratly measure the accuracy of the settings, but it does provide a small insight.\n",
+    "\n",
+    "Adding more layer with less hidden nodes doesn't increase the performance no matter learning rate. The lowest total of hidden nodes I could get was 33.\n",
+    "\n",
+    "<center><img src=\"./0204_smallest.png\" width=\"400\"></center>\n",
+    "\n",
+    "To be fair it's not always accurate after every training so a little luck is needed.\n",
+    "<center><img src=\"./0204_33.png\" width=\"600\"></center>"
+   ]
   }
  ],
  "metadata": {
